# Aerox_5

./: .gitignore  Cargo.toml  README.md  aerox_5.desktop
.github/workflows/: publish-release.yml
assets/: autostart.desktop.template
src/: battery_tray.rs  config.rs  gui.rs  lib.rs  main.rs
